--- a/html/19_paint.html
+++ b/html/19_paint.html
@@ -556,7 +556,7 @@
 
 <p><a class="p_ident" id="p-7SoGjQl3C4" href="#p-7SoGjQl3C4" tabindex="-1" role="presentation"></a>Al mismo tiempo, la tecnología del navegador es ridícula. Tienes que aprender una gran cantidad de trucos tontos y hechos oscuros para dominarla, y el modelo de programación predeterminado que ofrece es tan problemático que la mayoría de los programadores prefieren cubrirlo con varias capas de abstracción en lugar de lidiar con él directamente.</p>
 
-<p><a class="p_ident" id="p-3+hkGYiiHt" href="#p-3+hkGYiiHt" tabindex="-1" role="presentation"></a>{{index estándar, evolución}}</p>
+<p><a class="p_ident" id="p-3+hkGYiiHt" href="#p-3+hkGYiiHt" tabindex="-1" role="presentation"></a>{{index “estándar”, evolución}}</p>
 
 <p><a class="p_ident" id="p-cgdO7/3S3k" href="#p-cgdO7/3S3k" tabindex="-1" role="presentation"></a>Y aunque la situación definitivamente está mejorando, en su mayoría lo hace en forma de más elementos que se agregan para abordar deficiencias, creando aún más complejidad. Una característica utilizada por un millón de sitios web realmente no se puede reemplazar. Incluso si se pudiera, sería difícil decidir con qué debiera ser reemplazada.</p>
 
