--- a/html/16_game.html
+++ b/html/16_game.html
@@ -36,8 +36,6 @@
 
 <p><a class="p_ident" id="p-IfGxrEPdZA" href="#p-IfGxrEPdZA" tabindex="-1" role="presentation"></a>El jugador puede moverse con las teclas de flecha izquierda y derecha y puede saltar con la tecla de flecha hacia arriba. Saltar es una especialidad de este personaje del juego. Puede alcanzar varias veces su altura y puede cambiar de dirección en el aire. Esto puede no ser del todo realista, pero ayuda a darle al jugador la sensación de tener un control directo sobre el avatar en pantalla.</p>
 
-<p><a class="p_ident" id="p-Zb7oGD9ajn" href="#p-Zb7oGD9ajn" tabindex="-1" role="presentation"></a>{{index “número fraccionario”, discretización, “vida artificial”, “vida electrónica”}}</p>
-
 <p><a class="p_ident" id="p-wU7P212JRH" href="#p-wU7P212JRH" tabindex="-1" role="presentation"></a>El juego consiste en un fondo estático, dispuesto como una rejilla, con los elementos móviles superpuestos en ese fondo. Cada campo en la rejilla está vacío, sólido o es lava. Los elementos móviles son el jugador, las monedas y ciertas piezas de lava. Las posiciones de estos elementos no están restringidas a la rejilla: sus coordenadas pueden ser fraccionarias, permitiendo un movimiento suave.</p>
 
 <h2><a class="h_ident" id="h-LCW090OGxh" href="#h-LCW090OGxh" tabindex="-1" role="presentation"></a>La tecnología</h2>
@@ -46,7 +44,7 @@
 
 <p><a class="p_ident" id="p-02rkmELxyA" href="#p-02rkmELxyA" tabindex="-1" role="presentation"></a>Usaremos el DOM del navegador para mostrar el juego y leeremos la entrada del usuario manejando eventos de teclado.</p>
 
-<p><a class="p_ident" id="p-AQeAYtzocX" href="#p-AQeAYtzocX" tabindex="-1" role="presentation"></a>{{index rectángulo, “fondo (CSS)”, “posición (CSS)”, gráficos}}</p>
+<p><a class="p_ident" id="p-AQeAYtzocX" href="#p-AQeAYtzocX" tabindex="-1" role="presentation"></a>{{index “rectángulo”, “fondo (CSS)”, “posición (CSS)”, gráficos}}</p>
 
 <p><a class="p_ident" id="p-Fxtnet7a1k" href="#p-Fxtnet7a1k" tabindex="-1" role="presentation"></a>El código relacionado con la pantalla y el teclado es solo una pequeña parte del trabajo que necesitamos hacer para construir este juego. Dado que todo se ve como cajas de colores, dibujar es sencillo: creamos elementos del DOM y usamos estilos para darles un color de fondo, tamaño y posición.</p>
 
@@ -418,11 +416,9 @@ console.log(<span class="tok-string2">`</span>${simpleLevel.width}<span class="t
 
 <h2><a class="h_ident" id="h-tv/BeRzlcm" href="#h-tv/BeRzlcm" tabindex="-1" role="presentation"></a>Movimiento y colisión</h2>
 
-<p><a class="p_ident" id="p-KCvNCPZKJp" href="#p-KCvNCPZKJp" tabindex="-1" role="presentation"></a>{{index física, [animación, “juego de plataformas”]}}</p>
+<p><a class="p_ident" id="p-KCvNCPZKJp" href="#p-KCvNCPZKJp" tabindex="-1" role="presentation"></a>{{index “física”, [animación, “juego de plataformas”]}}</p>
 
 <p><a class="p_ident" id="p-DHGW4rc3K6" href="#p-DHGW4rc3K6" tabindex="-1" role="presentation"></a>Ahora estamos en el punto en el que podemos comenzar a agregar movimiento. El enfoque básico, seguido por la mayoría de juegos como este, es dividir tiempo en pequeños pasos y, para cada paso, mover a los actores una distancia correspondiente a su velocidad multiplicada por el tamaño del paso de tiempo. Mediremos el tiempo en segundos, por lo que las velocidades se expresan en unidades por segundo.</p>
-
-<p><a class="p_ident" id="p-wKG5m7ymDW" href="#p-wKG5m7ymDW" tabindex="-1" role="presentation"></a>{{index obstáculo, “detección de colisión”}}</p>
 
 <p><a class="p_ident" id="p-maCyB+GrHq" href="#p-maCyB+GrHq" tabindex="-1" role="presentation"></a>Mover cosas es fácil. La parte difícil es lidiar con las interacciones entre los elementos. Cuando el jugador golpea una pared o el suelo, no debería simplemente atravesarlo. El juego debe notar cuando un movimiento dado hace que un objeto golpee a otro objeto y responder en consecuencia. Para las paredes, el movimiento debe detenerse. Al golpear una moneda, esa moneda debe ser recogida. Al tocar lava, el juego debería perderse.</p>
 
@@ -520,8 +516,6 @@ Coin.prototype.collide = <span class="tok-keyword">function</span>(<span class="
   }
 };</pre>
 
-<p><a class="p_ident" id="p-U2bHlnrub0" href="#p-U2bHlnrub0" tabindex="-1" role="presentation"></a>{{index rebotante, multiplicación, “Clase Vec”, “detección de colisiones”}}</p>
-
 <p><a class="p_ident" id="p-THhyQQrDVM" href="#p-THhyQQrDVM" tabindex="-1" role="presentation"></a>Este método <code>update</code> calcula una nueva posición agregando el producto del paso de tiempo y la velocidad actual a su posición anterior. Si no hay obstáculos que bloqueen esa nueva posición, se mueve allí. Si hay un obstáculo, el comportamiento depende del tipo de bloque de lava—la lava goteante tiene una posición de <code>reset</code> a la que regresa cuando golpea algo. La lava rebotante invierte su velocidad multiplicándola por -1 para que comience a moverse en la dirección opuesta.</p>
 
 <p><a class="p_ident" id="p-czHlL0lAzr" href="#p-czHlL0lAzr" tabindex="-1" role="presentation"></a>Las monedas utilizan su método <code>update</code> para balancearse. Ignoran las colisiones con la cuadrícula ya que simplemente se balancean dentro de su propio cuadrado.</p>
@@ -569,7 +563,7 @@ Player.prototype.update = <span class="tok-keyword">function</span>(<span class=
 
 <p><a class="p_ident" id="p-+QACdgpz1o" href="#p-+QACdgpz1o" tabindex="-1" role="presentation"></a>El movimiento horizontal se calcula en función del estado de las teclas de flecha izquierda y derecha. Cuando no hay una pared bloqueando la nueva posición creada por este movimiento, se utiliza. De lo contrario, se mantiene la posición anterior.</p>
 
-<p><a class="p_ident" id="p-JyiO+ndghI" href="#p-JyiO+ndghI" tabindex="-1" role="presentation"></a>{{index aceleración, física}}</p>
+<p><a class="p_ident" id="p-JyiO+ndghI" href="#p-JyiO+ndghI" tabindex="-1" role="presentation"></a>{{index “aceleración”, física}}</p>
 
 <p><a class="p_ident" id="p-6IgUr/lkaY" href="#p-6IgUr/lkaY" tabindex="-1" role="presentation"></a>El movimiento vertical funciona de manera similar pero tiene que simular saltos y gravedad. La velocidad vertical del jugador (<code>ySpeed</code>) se acelera primero para tener en cuenta la gravedad.</p>
 
@@ -581,11 +575,7 @@ Player.prototype.update = <span class="tok-keyword">function</span>(<span class=
 
 <p><a class="p_ident" id="p-VyMbnD52Be" href="#p-VyMbnD52Be" tabindex="-1" role="presentation"></a>Para un juego como este, no queremos que las teclas tengan efecto una vez por pulsación de tecla. Más bien, queremos que su efecto (mover la figura del jugador) se mantenga activo mientras se mantienen presionadas.</p>
 
-<p><a class="p_ident" id="p-eLyCT3iT/g" href="#p-eLyCT3iT/g" tabindex="-1" role="presentation"></a>{{index método “preventDefault”}}</p>
-
 <p><a class="p_ident" id="p-3lsWnfq1i6" href="#p-3lsWnfq1i6" tabindex="-1" role="presentation"></a>Necesitamos configurar un controlador de teclas que almacene el estado actual de las teclas de flecha izquierda, derecha y arriba. También queremos llamar a <code>preventDefault</code> para esas teclas para que no terminen desplazando la página.</p>
-
-<p><a class="p_ident" id="p-T2VTkpwMuF" href="#p-T2VTkpwMuF" tabindex="-1" role="presentation"></a>{{index función “trackKeys”, “código de tecla”, “manejo de eventos”, “método addEventListener”}}</p>
 
 <p><a class="p_ident" id="p-orFOAfbCn+" href="#p-orFOAfbCn+" tabindex="-1" role="presentation"></a>La siguiente función, al darle un array de nombres de teclas, devolverá un objeto que sigue la posición actual de esas teclas. Registra controladores de eventos para eventos <code>&quot;keydown&quot;</code> y <code>&quot;keyup&quot;</code> y, cuando el código de tecla en el evento está presente en el conjunto de códigos que está siguiendo, actualiza el objeto.</p>
 
